--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "description": "ValidateTrait for Laravel",
   "require": {
     "php": "^8.0",
-    "illuminate/support": "^v10|^v11"
+    "illuminate/support": "^v10|^v11",
+    "laravel/framework": "11.x-dev"
   },
   "autoload": {
     "psr-4": {
