--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "require": {
     "php": "^8.0",
     "illuminate/support": "^v10|^v11",
-    "laravel/framework": "11.x-dev"
+    "laravel/framework": "^10.0 | ^11.0"
   },
   "autoload": {
     "psr-4": {
