--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,13 @@
   "description": "ValidateTrait for Laravel",
   "require": {
     "php": "^8.0",
-    "illuminate/support": "^v10|^v11",
-    "laravel/framework": "^10.0 | ^11.0"
+    "illuminate/support": "^v10|^v11|^v12",
+    "laravel/framework": "^10.0 | ^11.0 | ^12.0"
   },
   "autoload": {
+    "files": [
+      "src/Libs/Helpers.php"
+    ],
     "psr-4": {
       "QuantumTecnology\\ValidateTrait\\": "src/"
     }
@@ -23,7 +26,7 @@
   "support": {
     "email": "gustavo-computacao@hotmail.com"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "extra": {
     "laravel": {
       "providers": [
